# guitar_chord_generator

./: .gitignore  CMakeLists.txt  README.md
docs/: README.md  api-chord.md  api-chordhashtable.md  api-fretboard.md  architecture.md  building.md  cli-usage.md  music-theory.md
include/ChordEngine/: Chord.h  ChordHashTable.h  Fretboard.h
src/: Chord.cpp  ChordHashTable.cpp  Fretboard.cpp  main.cpp
tests/: main_tests.cpp
